--- a/dillon_votaw/javascript/fundamentals/js_dom_i.html
+++ b/dillon_votaw/javascript/fundamentals/js_dom_i.html
@@ -3,7 +3,7 @@
 </head>
 <body style="background-color: yellow;">
   <h1>Students</h1>
-  <ul id="main">
+  <ul style="font-size: 300px;"id="main">
     <!-- this is empty-->
   </ul>
 
@@ -17,7 +17,7 @@
           document.getElementById(id).appendChild(new_item);
         }
     };
-    let students = ["Jeff", "Jenny", "Javier", "Joslyn", "Joe", "Jane", "Django"];
+    let students = ['\uf0b1', "Jenny", "Javier", "Joslyn", "Joe", "Jane", "Django"];
     let target_id = "main";
     appendList(students, target_id);
 </script>
