--- a/dillon_votaw/javascript/hunting_github/hunting_github.html
+++ b/dillon_votaw/javascript/hunting_github/hunting_github.html
@@ -3,11 +3,9 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="jquery.js"></script>
 </head>
-<body style="background-color: yellow;">
-  <p style="font-size: 300px; color: red;">知るか</p>
-<script>
+<body style="background-color: blue;">
 
-
-</script>
+<button id="myButton">get name from github</button>
+<h1 id='container'></h1>
 </body>
 </html>
