--- a/dillon_votaw/javascript/ninja_class_2.html
+++ b/dillon_votaw/javascript/ninja_class_2.html
@@ -46,6 +46,7 @@ kakashi.drinkSake().drinkSake().drinkSake().drinkSake().sayName().showStats();
 const naruto = new Ninja('Naruto');
 kakashi.punch(naruto);
 kakashi.kick(naruto);
+kakashi.sayName();
 
 
 
