--- a/dillon_votaw/javascript/deck_of_cards.html
+++ b/dillon_votaw/javascript/deck_of_cards.html
@@ -11,19 +11,20 @@ class Deck{
     this.suits = ['A', 'B', 'C', 'D'];
     this.cards = ['1', '2', '3', '4', '5', '6', '7', '8', '9', 'X', 'J', 'Q', 'K'];
     this.deck = [];
-    this.deck = this.reset();
+    // this.deck = this.reset();
+    this.reset();
   }
-  shuffle(deckset){
-    var m = deckset.length;
+  shuffle(){
+    var m = this.deck.length;
     var t;
     var i;
     while(m){
       i = Math.floor(Math.random()*m--);
-      t = deckset[m];
-      deckset[m] = deckset[i];
-      deckset[i] = t;
+      t = this.deck[m];
+      this.deck[m] = this.deck[i];
+      this.deck[i] = t;
     }
-    return deckset;
+    return this;
   }
   reset(){
     let populate = [];
@@ -34,15 +35,12 @@ class Deck{
         populate.push(suit+card);
       }
     }
-    return populate;
+    this.deck = populate;
+    return this;
   }
-  deal(deckset){
-    // deckset = this.shuffle(deckset); THIS IS NOT REALISTIC
-    let card = deckset[deckset.length-1]
-    console.log(card);
-    return deckset.pop();
+  deal(){
+    return this.deck.pop();
   }
-
 }
 
 class Player{
@@ -52,35 +50,41 @@ class Player{
   }
   take(deal){
     this.hand.push(deal);
-    return deal
+    return this;
   }
-  discard(index){
-    this.hand.splice(index, 1);
-    return this.hand;
+  discard(){
+    this.hand.splice(0, 1);
+    return this;
   }
 }
 
 
-// below is lots of gross debugging
 let myDeck = new Deck();
-let deck2 = new Deck();
 let Dillon = new Player();
 console.log(myDeck.deck, "decklist");
 
-myDeck.deck = myDeck.shuffle(myDeck.deck);
+myDeck.shuffle();
 console.log(myDeck.deck, "shuffledDecklist");
-myDeck.deck = deck2.reset();
+myDeck.reset();
 console.log(myDeck.deck, "resetDeckList");
-myDeck.deck = myDeck.shuffle(myDeck.deck);
-myTake = Dillon.take(myDeck.deal(myDeck.deck));
-console.log(myDeck.deck);
-myTake = Dillon.take(myDeck.deal(myDeck.deck));
-console.log(myDeck.deck);
-myTake = Dillon.take(myDeck.deal(myDeck.deck));myTake = Dillon.take(myDeck.deal(myDeck.deck));myTake = Dillon.take(myDeck.deal(myDeck.deck));
+myDeck.shuffle();
+console.log(myDeck.deck, "shuffledDecklist");
+Dillon.take(myDeck.deal());
+console.log(myDeck.deck, "deck");
+console.log(Dillon.hand, "hand");
+Dillon.take(myDeck.deal());
+console.log(myDeck.deck, "deck");
+console.log(Dillon.hand,"hand");
+Dillon.take(myDeck.deal()); Dillon.take(myDeck.deal()); Dillon.take(myDeck.deal());
 console.log(Dillon.hand);
-Dillon.hand = Dillon.discard(0);Dillon.hand = Dillon.discard(0);Dillon.hand = Dillon.discard(0);
+console.log(myDeck.deck);
+Dillon.discard(0);Dillon.discard(0);Dillon.discard(0);
+console.log(Dillon.hand);
 
-console.log(Dillon.hand);
+let testerDeck = new Deck();
+console.log(testerDeck.deck, "first");
+testerDeck.shuffle();
+console.log(testerDeck.deck, "shuffled");
 
 console.log('\u2660 \u2665 \u2666 \u2663');
 </script>
