--- a/dillon_votaw/javascript/for_running_js.html
+++ b/dillon_votaw/javascript/for_running_js.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="jquery.js"></script>
+	<!-- <script src="jquery.js"></script> uncomment if needed-->
 </head>
 <body style="background-color: yellow;">
   <p style="font-size: 300px; color: red;">知るか</p>
