--- a/wittrock/blackjack.html
+++ b/wittrock/blackjack.html
@@ -168,12 +168,12 @@
 
 		createPlayersUI(){
             document.getElementById('players').innerHTML = '';
-            for(let i = 0; i < players.length; i++)
+            for(var i = 0; i < players.length; i++)
             {
-                let div_player = document.createElement('div');
-                let div_playerid = document.createElement('div');
-                let div_hand = document.createElement('div');
-                let div_points = document.createElement('div');
+                var div_player = document.createElement('div');
+                var div_playerid = document.createElement('div');
+                var div_hand = document.createElement('div');
+                var div_points = document.createElement('div');
 
                 div_points.className = 'points';
                 div_points.id = 'points_' + i;
@@ -182,10 +182,10 @@
                 div_hand.id = 'hand_' + i;
 
                 div_playerid.innerHTML = players[i].ID;
-                div_player.appendChild(div_playerid);
-                div_player.appendChild(div_hand);
-                div_player.appendChild(div_points);
-                document.getElementById('players').appendChild(div_player);
+                div_player.append(div_playerid);
+                div_player.append(div_hand);
+                div_player.append(div_points);
+                document.getElementById('players').append(div_player);
             }
         }
 	}
