--- a/wittrock/huntinggit/hunting_github.html
+++ b/wittrock/huntinggit/hunting_github.html
@@ -3,7 +3,9 @@
 <head>
 	<title></title>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="hunting_github.js"></script>
+	<script type="text/javascript">
+		
+	</script>
 </head>
 <body>
 	
